--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,5 +1,15 @@
 <h1>New question</h1>
 <%= form_with model: @question do |form| %>
+  <% if @question.errors.any? %>
+    <div>
+      <ul>
+        <% @question.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </li>
+      </ul>
+    </div>
+  <% end %>
   <div>
     <%= form.label :title %><br>
     <%= form.text_field :title %>
