--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -2,3 +2,4 @@
 <p>Title:<%= @question.title %></p>
 <p>Name:<%= @question.name %></p>
 <p>Content:<%= @question.content %></p>
+<%= link_to 'top', questions_path %>
